--- a/styles/landing/landing.scss
+++ b/styles/landing/landing.scss
@@ -13,7 +13,7 @@
 html, body {
 	font-family: 'Roboto', sans-serif;
 	background: #000000;
-	//min-height: 100%;
+	overflow: hidden;
 }
 
 ol, ul {
